[package]
name = "pallet-valueflows-action-rpc-runtime-api"
version = "0.0.1"
description = "RPC runtime API for valueflows action pallet."
authors = ["Kaichao Sun <kaichaosuna@gmail.com>"]
homepage = "https://www.valueflo.ws/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/kaichaosun/substrate-valueflows"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-api = { default-features = false, version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-valueflows-action = { version = "0.0.1", default-features = false, path = "../../../action"  }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"pallet-valueflows-action/std",
]
